# micius

./: .gitignore  LICENSE  README.md  README_CN.md  micius  micius.cmd  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
atlas_agent/: manifest.py  safety.py  server.py  tools.py
board_knowledge/boards/: atlas_200i_dk_a2.json
board_knowledge/manuals/: README.md
board_knowledge/schemas/: board_profile.schema.json
board_knowledge/skills/: atlas_200i_dk_a2.md
board_knowledge/templates/: board_profile.template.json
configs/: atlas_agent.example.json  device_node.example.json  local_agent.example.json
configs/providers/: anthropic-claude.example.json  deepseek-compatible.example.json  openai-compatible.example.json
docs/: DeviceResearch.md
local_agent/: agent.py  board_knowledge.py  cli.py  context_engine.py  device_connect.py  device_research.py  llm_client.py  micius_memory.py  remote_tools.py  self_tools.py
local_agent/esp32_blink/: README.md  platformio.ini
local_agent/esp32_blink/src/: main.cpp
local_agent/esp32_camera_web/: README.md  platformio.ini
local_agent/esp32_camera_web/src/: main.cpp
micius_device_node/: __init__.py  server.py
micius_memory/: MEMORY.example.md  USER.example.md
shared/: protocol.py
